--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,13 @@ members = [
     "mylib1",
     "mylib2",
     "mylib3",
-    "wasm-game-of-life",
+    # "wasm-game-of-life",
 ]
+
+[profile.dev]
+opt-level = 0
+debug = true
+
+[profile.release]
+opt-level = 3
+debug = false
